--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		 -->
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
 	<div id="header">
@@ -132,7 +133,7 @@
             <div class="desc">
                 <b><a href="homepage/dualaxis.pdf" download><i>In Situ</i> Biaxial Rotation at Low-Temperatures in High Magnetic Fields</a></b><br>
                 Nicholas Selby, Matthew Crawford, Lisa Tracy, John L. Reno, and Wei Pan<br>
-                <a href="https://aip.scitation.org/journal/rsi">Review of Scientific Instruments</a> 85, 095116, 2014.<br>
+                <a href="https://aip.scitation.org/journal/rsi">Review of Scientific Instruments</a> 85 (9), 095116, 2014.<br>
                 <a href="homepage/dualaxis.bib" target="_blank">BibTeX</a>
             </div>
         </div>
