TeachBot and RFind project pages

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 		 -->
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="about.css">
+	<link rel="stylesheet" type="text/css" href="about/about.css">
 </head>
 <body>
 	<div id="header">
