--- a/selected-work.html
+++ b/selected-work.html
@@ -30,7 +30,7 @@
 		 -->
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="selected-work.css">
+	<link rel="stylesheet" type="text/css" href="selected-work/selected-work.css">
 </head>
 <body>
 	<div id="header">
@@ -49,9 +49,78 @@
     <div id="selected-work-container">
         <a class="project" href="teachbot.html">
             <img src="selected-work/teachbot.jpg">
-            <div class="proj-overlay">#robotics #advanced-manufacturing #education</div>
+            <div class="proj-overlay">
+				<div class="hashtags">#robotics #advanced-manufacturing #education</div>
+				<div class="proj-title">TeachBot</div>
+			</div>
+        </a>
+		
+        <a class="project" href="rfind.html">
+            <img src="selected-work/rfind.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#rfid #networking #artificial-intelligence</div>
+				<div class="proj-title">RFind</div>
+			</div>
+        </a>
+		
+        <a class="project" href="rfly.html">
+            <img src="selected-work/rfly.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#rfid #drones #networking</div>
+				<div class="proj-title">RFly</div>
+			</div>
+        </a>
+		
+        <a class="project" href="ndte.html">
+            <img src="selected-work/ndte.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#acoustics #signal-processing #structures</div>
+				<div class="proj-title">Nondestructive Testing</div>
+			</div>
+        </a>
+		
+        <a class="project" href="lowtemp.html">
+            <img src="selected-work/lowtemp.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#quantum #design</div>
+				<div class="proj-title">Quantum Computing</div>
+			</div>
+        </a>
+		
+        <a class="project" href="capstone.html">
+            <img src="selected-work/capstone.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#drones #artificial-intelligence #global-health</div>
+				<div class="proj-title">Aerial Mapping</div>
+			</div>
+        </a>
+		
+        <a class="project" href="tinynets.html">
+            <img src="selected-work/tinynets.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#distributed-systems #networking</div>
+				<div class="proj-title">TinyNets</div>
+			</div>
+        </a>
+		
+        <a class="project" href="gtsr.html">
+            <img src="selected-work/gtsr.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#solar #racecar #leadership</div>
+				<div class="proj-title">Solar Racing</div>
+			</div>
+        </a>
+		
+        <a class="project" href="eqr.html">
+            <img src="selected-work/eqr.jpg">
+            <div class="proj-overlay">
+				<div class="hashtags">#public-health #web-development</div>
+				<div class="proj-title">Emergency QR</div>
+			</div>
         </a>
     </div>
+
+	<div class="section"></div>
 
 	<footer>
 		<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
