--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		 -->
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="home.css">
+	<link rel="stylesheet" type="text/css" href="homepage/home.css">
 </head>
 <body>
 	<div id="header">
