First full draft

--- a/rfind.html
+++ b/rfind.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Selected Work</title>
+	<title>RFind</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
@@ -44,7 +44,7 @@
     </div>
 
     <div class="cover section">
-        <img src="project-pages/rfind-cover.jpg">
+        <img src="project-pages/rfind-cover.jpg" alt="Hand holding smartphone showing a schematic of a living room">
         <div class="title">RFind</div>
     </div>
 
@@ -63,7 +63,7 @@
 
     <div class="separator"></div>
 
-    <p class="disclaimer"><i>The following is from the <a href="https://www.media.mit.edu/projects/rfid-localization/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</i></p>
+    <p class="disclaimer"><i>The following is from the <a rel="external" href="https://www.media.mit.edu/projects/rfid-localization/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</i></p>
 
     <p>Presenting RFind, a new technology that allows us to locate almost any object with extreme accuracy by transforming low-cost, battery-free wireless stickers into powerful radars. At a high level, our technology operates by measuring the time it takes the signal to travel from the wireless sticker to an access point. By taking into account the speed of propagation of light, we can then map the time to an exact location (with sub-centimeter precision) in 3D space.</p>
 
@@ -71,18 +71,16 @@
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/nd7aDOO8dz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <p>Over the past few years, we have witnessed enormous interest in localization technologies: GPS works outdoors, <a href="https://www.thetileapp.com/en-us/" target="_blank">Tile</a> can determine a coarse (street-level) location of objects, and <a href="http://rfly.media.mit.edu/" target="_blank">drones can be used for inventory control.</a></p>
+    <p>Over the past few years, we have witnessed enormous interest in localization technologies: GPS works outdoors, <a rel="external" href="https://www.thetileapp.com/en-us/" target="_blank">Tile</a> can determine a coarse (street-level) location of objects, and <a rel="external" href="http://rfly.media.mit.edu/" target="_blank">drones can be used for inventory control.</a></p>
 
     <p>Yet, if we could achieve extreme location accuracy, it would be a game changer for numerous industries, including smart environments, virtual reality, and robotic manipulation. For example, we could use this capability to pinpoint the location of lost items, saving ourselves all the time we waste looking for our lost keys, wallets, or glasses. We could also use this capability to track fine-grained finger movements in virtual reality applications and enable a humanoid robot to find and even fetch an item with high accuracy. Unfortunately, however, none of today's technologies can realize this level of precision. RFind aims to change that.</p>
 
     <p>Our key innovation is a new technique called two-frequency excitation. The technique uses one frequency to power up the battery-free sticker and uses the other frequency for pinpointing the exact location. Our technology is fully compliant with the FCC standards and the communication standard for billions of few-cent wireless stickers in today's world.</p>
 
     <p>​To learn more about the technology, <a href="homepage/rfind.pdf" download>read our paper!</a></p>
-
-    <div class="section"></div>
     
 	<footer>
-		<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
 </body>
 </html>
