--- a/selected-work.html
+++ b/selected-work.html
@@ -7,7 +7,7 @@
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 
 	<!-- SEO Description-->
-	<meta name="description" content="Nicholas Selby's Engineering Portfolio">
+	<meta name="description" content="Nicholas S. Selby's Engineering Portfolio">
 
 	<!-- Favicon -->
 	<!-- <link rel="icon" href="https://rupumped.github.io/favicon.png" type="image/x-icon"> -->
@@ -48,7 +48,7 @@
 
     <div id="selected-work-container">
         <a class="project" href="teachbot.html">
-            <img src="selected-work/teachbot.jpg">
+            <img src="selected-work/teachbot.jpg" alt="Man interacting with a collaborative manufacturing robot">
             <div class="proj-overlay">
 				<div class="hashtags">#robotics #advanced-manufacturing #education</div>
 				<div class="proj-title">TeachBot</div>
@@ -56,7 +56,7 @@
         </a>
 		
         <a class="project" href="rfind.html">
-            <img src="selected-work/rfind.jpg">
+            <img src="selected-work/rfind.jpg" alt="Smart phone displaying a schematic of a living room">
             <div class="proj-overlay">
 				<div class="hashtags">#rfid #networking #artificial-intelligence</div>
 				<div class="proj-title">RFind</div>
@@ -64,7 +64,7 @@
         </a>
 		
         <a class="project" href="rfly.html">
-            <img src="selected-work/rfly.jpg">
+            <img src="selected-work/rfly.jpg" alt="Drone outfitted with a PCB">
             <div class="proj-overlay">
 				<div class="hashtags">#rfid #drones #networking</div>
 				<div class="proj-title">RFly</div>
@@ -72,7 +72,7 @@
         </a>
 		
         <a class="project" href="ndte.html">
-            <img src="selected-work/ndte.jpg">
+            <img src="selected-work/ndte.jpg" alt="Aluminum fastened in an acoustic experimental apparatus">
             <div class="proj-overlay">
 				<div class="hashtags">#acoustics #signal-processing #structures</div>
 				<div class="proj-title">Nondestructive Testing</div>
@@ -80,7 +80,7 @@
         </a>
 		
         <a class="project" href="lowtemp.html">
-            <img src="selected-work/lowtemp.jpg">
+            <img src="selected-work/lowtemp.jpg" alt="Custom device for measuring the fractional quantum Hall effect">
             <div class="proj-overlay">
 				<div class="hashtags">#quantum #design</div>
 				<div class="proj-title">Quantum Computing</div>
@@ -88,7 +88,7 @@
         </a>
 		
         <a class="project" href="capstone.html">
-            <img src="selected-work/capstone.jpg">
+            <img src="selected-work/capstone.jpg" alt="Drone being piloted by one of three men in a field">
             <div class="proj-overlay">
 				<div class="hashtags">#drones #artificial-intelligence #global-health</div>
 				<div class="proj-title">Aerial Mapping</div>
@@ -96,7 +96,7 @@
         </a>
 		
         <a class="project" href="tinynets.html">
-            <img src="selected-work/tinynets.jpg">
+            <img src="selected-work/tinynets.jpg" alt="PCB held against a purple background">
             <div class="proj-overlay">
 				<div class="hashtags">#distributed-systems #networking</div>
 				<div class="proj-title">TinyNets</div>
@@ -104,15 +104,15 @@
         </a>
 		
         <a class="project" href="gtsr.html">
-            <img src="selected-work/gtsr.jpg">
+            <img src="selected-work/gtsr.jpg" alt="Solar racecar">
             <div class="proj-overlay">
-				<div class="hashtags">#solar #racecar #leadership</div>
+				<div class="hashtags">#solar #automotive #leadership</div>
 				<div class="proj-title">Solar Racing</div>
 			</div>
         </a>
 		
         <a class="project" href="eqr.html">
-            <img src="selected-work/eqr.jpg">
+            <img src="selected-work/eqr.jpg" alt="Gloved hand holding a wallet and a card with a QR labeled Emergency Medical Information SCAN ME">
             <div class="proj-overlay">
 				<div class="hashtags">#public-health #web-development</div>
 				<div class="proj-title">Emergency QR</div>
@@ -120,10 +120,8 @@
         </a>
     </div>
 
-	<div class="section"></div>
-
 	<footer>
-		<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
 </body>
 </html>
