--- a/teachbot.html
+++ b/teachbot.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Selected Work</title>
+	<title>TeachBot</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 
 	<!-- SEO Description-->
-	<meta name="description" content="TeachBot">
+	<meta name="description" content="TeachBot: An Education System for Workforce Development">
 
 	<!-- Favicon -->
 	<!-- <link rel="icon" href="https://rupumped.github.io/favicon.png" type="image/x-icon"> -->
@@ -44,7 +44,7 @@
     </div>
 
     <div class="cover section">
-        <img src="project-pages/teachbot-cover.jpg">
+        <img src="project-pages/teachbot-cover.jpg" alt="A student interacting with a collaborative manufacturing robot">
         <div class="title">TeachBot</div>
     </div>
 
@@ -91,7 +91,7 @@
     <h1>Solution</h1>
     <p>After doing a careful analysis of existing products and diving deep into the relevant teaching science literature, we designed a fully autonomous robotic instructor to teach workers on a manufacturing line how to use robots effectively. Our system consists of a collaborative robot system (e.g. RethinkRobotics Sawyer, Universal Robot, ABB Yumi, etc.), a computer with an internet connection, a projector to display educational graphics, and peripheral devices like conveyor belts and CNC equipment to simulate a real manufacturing environment.</p>
     <div class="centered">
-        <img src="project-pages/teachbot-hardware-overview.jpg">
+        <img src="project-pages/teachbot-hardware-overview.jpg" alt="Hardware overview of the TeachBot system including a robot, computer, projector, and peripherals">
     </div>
     <p>A previously-thought-of-as-critical piece of hardware is missing from our bill of materials: a human instructor. The robot serves as both teacher and demonstration machine, leveraging its existence as a robotic system to teach robotics more effectively. Rather than exclusively relying on diagrams and lectures to illustrate concepts like playback control and waypoints, TeachBot guides learners to interact with a physical embodiment of the concepts about which they are learning. As we demonstrate, TeachBot's "learning by touching" curriculum is superior to more traditional teaching methods.</p>
 
@@ -100,7 +100,7 @@
     <h1>Evaluation</h1>
     <p>To evaluate our solution, we leveraged our relationships with our industry sponsors to collect human subjects for randomized control trials. Subjects were divided randomly into two groups: (1) a control group that watched a traditional video lecture and (2) an experimental group that took the TeachBot learning module. Both groups were given a pre- and post-test to evaluate how much they learned and how each learning method affected their self-efficacy regarding robotics.</p>
     <div class="centered">
-        <img src="project-pages/teachbot-results.jpg">
+        <img src="project-pages/teachbot-results.jpg" alt="Two plots showing improvement in self-efficacy and learning gain of the experimental group relative to the control group with p<0.05 and p<0.20, respectively">
     </div>
     <p>Our results demonstrate that <b>people learn significantly more from TeachBot</b> than they do from traditional video lectures. Furthermore, TeachBot helps learners feel more confident working alongside a robot.</p>
 
@@ -109,12 +109,10 @@
     <h1>Moving Forward</h1>
     <p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
     <p>At present, we are deploying a prototype of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers in the state of Massachusetts, and further developing the curriculum to meet the needs of diverse manufacturing sectors.</p>
-    <p>You can download our journal paper <a href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">here</a> and award-winning poster <a href="project-pages/teachbot-poster" download>here</a>. All of our software is open source on <a href="https://github.com/Darbeloff/TeachBot">GitHub</a>.</p>
-
-    <div class="section"></div>
+    <p>You can download our journal paper <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">here</a> and award-winning poster <a href="project-pages/teachbot-poster" download>here</a>. All of our software is open source on <a rel="external" href="https://github.com/Darbeloff/TeachBot">GitHub</a>.</p>
     
 	<footer>
-		<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
 </body>
 </html>
