--- a/about.html
+++ b/about.html
@@ -51,29 +51,29 @@
                 The whole secret of life is to be interested in one thing profoundly and in a thousand things as well.
             </div>
             <div id="quote-citation">
-                — Hugh Walpole
+                ― Hugh Walpole
             </div>
         </div>
     </div>
 
     <div id="bio" class="section">
-        <p><img id="img-dog" src="about/dog.jpg">I am Nick Selby, and I am passionate about engineering that centers users and their communities. I have always wanted to "be an inventor when I grow up." I have had the pleasure of working on a variety of personally exciting projects. I started my first company at age 18 coding and selling applications for graphing calculators to help high school and college students with their math homework. Since then, I have gotten to do research in quantum computing, build a solar-powered racecar, and travel internationally to teach students how to use engineering to improve their communities.</p>
+        <p><img id="img-dog" class="img-right" src="about/dog.jpg" alt="Me playing with a dog">I am Nick Selby, and I am passionate about engineering that centers users and their communities. I have always wanted to "be an inventor when I grow up." I have had the pleasure of working on a variety of personally exciting projects. I started my first company at age 18 coding and selling applications for graphing calculators to help high school and college students with their math homework. Since then, I have gotten to do research in quantum computing, build a solar-powered racecar, and travel internationally to teach students how to use engineering to improve their communities.</p>
 
-        <p>Watching someone's face light up when they realize a knew way of thinking suddenly makes sense delights me. I am privileged to have been hired as a Teaching Assistant (TA) for computer science, physics, and robotics courses at <img id="img-teaching" src="about/teaching.jpg">undergraduate and graduate levels, and was honored when my students' course evaluations ranked me in the 99th percentile of all TAs at Georgia Tech. My passion for teaching also helps me be a better leader. While serving as the Chief Engineer of Georgia Tech Solar Racing, I piloted a formalized training program that doubled our recruitment and ensured all of our new members could contribute meaningfully to the success of the team. Regardless of where I work, I hope to be able to contribute to growing the knowledge-base of my coworkers and teammates.</p>
+        <p>Watching someone's face light up when they realize a knew way of thinking suddenly makes sense delights me. I am privileged to have been hired as a Teaching Assistant (TA) for computer science, physics, and robotics courses at <img id="img-teaching" class="img-left" src="about/teaching.jpg" alt="Me teaching a group of students how to solder">undergraduate and graduate levels, and was honored when my students' course evaluations ranked me in the 99th percentile of all TAs at Georgia Tech. My passion for teaching also helps me be a better leader. While serving as the Chief Engineer of Georgia Tech Solar Racing, I piloted a formalized training program that doubled our recruitment and ensured all of our new members could contribute meaningfully to the success of the team. Regardless of where I work, I hope to be able to contribute to growing the knowledge-base of my coworkers and teammates.</p>
 
         <p>When I'm not building something, I enjoy public speaking, hiking, and traveling. Public speaking is my artistic outlet. The act of speaking to a crowd, be it professionally, motivationally, or theatrically, brings me joy. I have had the privilege of delivering presentations around the world to audiences that sometimes number in the thousands. Whatever the occasion, I feel a responsibility to cause my audience to laugh, learn something, and leave inspired.</p>
 
-        <img id="img-fun" src="about/fun.png">
+        <img id="img-fun" class="img-full-width" src="about/fun.png" alt="three images side-by-side: me on a mountain in Antarctica, me in a rice paddy in China, and me in the foothills in Arizona">
 
         <p>Many of my favorite adventures happen while traveling. I've kayaked in Scotland, backpacked in Patagonia, farmed rice paddies in China, and mountaineered in Antarctica. After trekking through otherworldly landscapes, I further the adventure by enjoying the local cuisine—the spicier the better—and discussing culture, politics, and philosophy with people I meet. My goal is to develop a strong engineering skillset and collaborate with researchers and entrepreneurs around the world to solve problems at the community level.</p>
 
         <p>Send me an email if you have an interesting project on which you would like to collaborate. I am always ready for another adventure.</p>
 
-        <img id="img-final" src="about/final.jpg">
+        <img id="img-final" class="image-full-width" src="about/final.jpg" alt="Me looking over Patagonia">
     </div>
 
 	<footer>
-		<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
 </body>
 </html>
