Fix broken links

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         Journal Referee [<a rel="external" href="https://publons.com/researcher/3507536/nicholas-selby/peer-review/" target="_blank">Publons</a>]:
         <ul>
             <li><a rel="external" href="https://iros2015.informatik.uni-hamburg.de/" target="_blank">IEEE International Conference on Intelligent Robots and Systems</a></li>
-            <li><a rel="external" href="tosn.acm.org" target="_blank">ACM Transactions on Sensor Networks</a></li>
+            <li><a rel="external" href="https://dl.acm.org/journal/tosn" target="_blank">ACM Transactions on Sensor Networks</a></li>
             <li><a rel="external" href="https://www.computer.org/web/tmc" target="_blank">IEEE Transactions on Mobile Computing</a></li>
             <li><a rel="external" href="https://ieee-iotj.org/" target="_blank">IEEE Internet of Things Journal</a></li>
         </ul>
