--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="Personal website of Nicholas S. Selby">
+    <link rel="canonical" href="https://rupumped.github.io/">
 
 	<!-- Favicon -->
 	<!-- <link rel="icon" href="https://rupumped.github.io/favicon.png" type="image/x-icon"> -->
@@ -22,11 +24,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Questrial&display=swap" rel="stylesheet">
 
-	<!-- Copy-Paste Debugging -->
-	<!-- Web: h_ttps://rupumped.github.io/
-		 Nick Ubuntu: f_ile:///home/nick/GitHub/rupumped.github.io/
-		 Nick Windows: f_ile:///C:/Users/nick/Documents/GitHub/rupumped.github.io/
-		 -->
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="homepage/home.css">
