--- a/ndte.html
+++ b/ndte.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="Nondestructive Testing and Evaluation">
+    <link rel="canonical" href="https://rupumped.github.io/ndte.html">
 
 	<!-- Favicon -->
 	<!-- <link rel="icon" href="https://rupumped.github.io/favicon.png" type="image/x-icon"> -->
