--- a/about.html
+++ b/about.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
-        <META NAME="Handheld-Friendly" content="True">
+    <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
 	<meta name="description" content="About Nicholas Selby">
     <link rel="canonical" href="https://rupumped.github.io/about.html">
 
 	<!-- Favicon -->
-	<!-- <link rel="icon" href="https://rupumped.github.io/favicon.png" type="image/x-icon"> -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
@@ -25,12 +25,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Questrial&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet"> 
 
-	<!-- Copy-Paste Debugging -->
-	<!-- Web: h_ttps://rupumped.github.io/
-		 Nick Ubuntu: f_ile:///home/nick/GitHub/rupumped.github.io/
-		 Nick Windows: f_ile:///C:/Users/nick/Documents/GitHub/rupumped.github.io/
-		 -->
-	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="about/about.css">
 </head>
