--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://rupumped.github.io/">
 
 	<!-- Favicon -->
-	<!-- <link rel="icon" href="https://rupumped.github.io/favicon.png" type="image/x-icon"> -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
