--- a/selected-work.html
+++ b/selected-work.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://rupumped.github.io/selected-work.html">
 
 	<!-- Favicon -->
-	<!-- <link rel="icon" href="https://rupumped.github.io/favicon.png" type="image/x-icon"> -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
@@ -25,11 +25,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Questrial&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet"> 
 
-	<!-- Copy-Paste Debugging -->
-	<!-- Web: h_ttps://rupumped.github.io/
-		 Nick Ubuntu: f_ile:///home/nick/GitHub/rupumped.github.io/
-		 Nick Windows: f_ile:///C:/Users/nick/Documents/GitHub/rupumped.github.io/
-		 -->
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="selected-work/selected-work.css">
