--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,6 @@
 	<title>Blog</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
@@ -40,7 +39,7 @@
         </div>
     </div>
 
-	<a class="item" href="blog/Bond Graph Cheat Sheet.pdf" download target="_blank">
+	<a class="item" href="blog/bond-graph-quick-ref.pdf" target="_blank" download>
         <p class="date">July 21, 2021</p>
         <div class="w-img">
             <img src="blog/bond-graphs.jpg" alt="Example illustration of a 0-junction">
