--- a/lowtemp.html
+++ b/lowtemp.html
@@ -4,7 +4,6 @@
 	<title>Quantum Computing</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
@@ -111,7 +110,7 @@
     </table>
     <p>My design was similar to that of a puppet. High precision linear actuators outside the tank raised and lowered strings which, in turn, rotated the sample. The design was entirely machined out of stainless steel and brass so as to withstand high magnetic fields and avoid superconductivity at low temperatures. Because the strings were the only coupling between the sample stage and the rest of the device, the sample stage was effectively thermally isolated from the heat being generated outside the tank, allowing the device to work at extremely low temperatures. Finally, just like raising one arm on a puppet does not affect the other arm or legs, dual linear actuators could adjust the sample orientation about both axes independently.</p>
     <div class="centered section">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/a-O0BJFlavk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/a-O0BJFlavk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <h1>Results</h1>
