--- a/rfind.html
+++ b/rfind.html
@@ -4,7 +4,6 @@
 	<title>RFind</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
@@ -65,7 +64,7 @@
     <p>Presenting RFind, a new technology that allows us to locate almost any object with extreme accuracy by transforming low-cost, battery-free wireless stickers into powerful radars. At a high level, our technology operates by measuring the time it takes the signal to travel from the wireless sticker to an access point. By taking into account the speed of propagation of light, we can then map the time to an exact location (with sub-centimeter precision) in 3D space.</p>
 
     <div class="centered section">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/nd7aDOO8dz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/nd7aDOO8dz4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <p>Over the past few years, we have witnessed enormous interest in localization technologies: GPS works outdoors, <a rel="external" href="https://www.thetileapp.com/en-us/" target="_blank">Tile</a> can determine a coarse (street-level) location of objects, and <a rel="external" href="http://rfly.media.mit.edu/" target="_blank">drones can be used for inventory control.</a></p>
