--- a/service.html
+++ b/service.html
@@ -4,7 +4,6 @@
 	<title>Service</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
@@ -42,55 +41,55 @@
 
     <h1>Clubes de Ciencia</h1>
 
-    <img class="img-full-width" src="service/teaching-2.jpg">
+    <img class="img-full-width" src="service/teaching-2.jpg" alt="Me teaching a class using a projector">
     <div class="gallery">
         <a href="service/teaching-0.jpg" target="_blank">
-            <img src="service/teaching-0.jpg">
+            <img src="service/teaching-0.jpg" alt="Me talking to a small group of students">
         </a>
         <a href="service/teaching-1.jpg" target="_blank">
-            <img src="service/teaching-1.jpg">
+            <img src="service/teaching-1.jpg" alt="Me giving a lecture to a class">
         </a>
         <a href="service/teaching-3.jpg" target="_blank">
-            <img src="service/teaching-3.jpg">
+            <img src="service/teaching-3.jpg" alt="Me teaching students how to solder">
         </a>
         <a href="service/experiment-0.jpg" target="_blank">
-            <img src="service/experiment-0.jpg">
+            <img src="service/experiment-0.jpg" alt="Students learning to solder">
         </a>
         <a href="service/experiment-1.jpg" target="_blank">
-            <img src="service/experiment-1.jpg">
+            <img src="service/experiment-1.jpg" alt="Students using an oscilloscope">
         </a>
         <a href="service/experiment-2.jpg" target="_blank">
-            <img src="service/experiment-2.jpg">
+            <img src="service/experiment-2.jpg" alt="An oscilloscope running">
         </a>
         <a href="service/sensor-0.jpeg" target="_blank">
-            <img src="service/sensor-0.jpeg">
+            <img src="service/sensor-0.jpeg" alt="Student blowing into a sensor">
         </a>
         <a href="service/sensor-1.jpeg" target="_blank">
-            <img src="service/sensor-1.jpeg">
+            <img src="service/sensor-1.jpeg" alt="Student holding a sensor to an exhaust pipe">
         </a>
         <a href="service/sensor-2.jpg" target="_blank">
-            <img src="service/sensor-2.jpg">
+            <img src="service/sensor-2.jpg" alt="Students testing sensor in a restroom">
         </a>
         <a href="service/sensor-3.jpeg" target="_blank">
-            <img src="service/sensor-3.jpeg">
+            <img src="service/sensor-3.jpeg" alt="A sensor next to an exhaust pipe">
         </a>
         <a href="service/sensor-4.jpeg" target="_blank">
-            <img src="service/sensor-4.jpeg">
+            <img src="service/sensor-4.jpeg" alt="A custom noise sensor">
         </a>
         <a href="service/presentation-0.jpg" target="_blank">
-            <img src="service/presentation-0.jpg">
+            <img src="service/presentation-0.jpg" alt="Students giving a presentation on air pollution">
         </a>
         <a href="service/presentation-1.jpg" target="_blank">
-            <img src="service/presentation-1.jpg">
+            <img src="service/presentation-1.jpg" alt="Student giving a presentation on engineering tools">
         </a>
         <a href="service/presentation-2.jpg" target="_blank">
-            <img src="service/presentation-2.jpg">
+            <img src="service/presentation-2.jpg" alt="Student giving a presentation on air pollution with colorful graphics">
         </a>
         <a href="service/group-0.jpg" target="_blank">
-            <img src="service/group-0.jpg">
+            <img src="service/group-0.jpg" alt="Large group of students and instructors">
         </a>
         <a href="service/group-1.jpg" target="_blank">
-            <img src="service/group-1.jpg">
+            <img src="service/group-1.jpg" alt="My class">
         </a>
     </div>
 
