--- a/tinynets.html
+++ b/tinynets.html
@@ -4,7 +4,6 @@
 	<title>TinyNets</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
@@ -100,7 +99,7 @@
     </ul>
     <p>Below is an illustration of TinyNets on a simulated network:</p>
     <div class="centered section">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4Rnn4MHgGAw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4Rnn4MHgGAw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <p>You can download the full project report <a href="project-pages/tinynets-report.pdf" target="_blank" download>here</a>. Download our code and CAD files to try it yourself on <a rel="external" href="https://github.com/jakeread/tinynets" target="_blank">our GitHub repository</a>.</p>
     
