--- a/rfly.html
+++ b/rfly.html
@@ -4,7 +4,6 @@
 	<title>RFly</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
@@ -69,7 +68,7 @@
     <p>​To overcome this challenge, we introduce RFly, a drone-based wireless system that can scan and locate items in warehouses. The system leverages cheap, battery-free RFID (Radio Frequency Identifier) stickers, which are attached to every item in the warehouse similar to barcodes. These RFIDs power up and respond with a unique identifier when commanded by a wireless device called a reader. To scan a warehouse, a drone operator dispatches a small, inexpensive, and safe drone which flies throughout a warehouse, cataloging and localizing all the RFIDs in a warehouse. The video below shows how the system operates.</p>
 
     <div class="centered section">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/fvPR09noiL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/fvPR09noiL8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <p>The key innovation in designing RFly is a new relay that enables cataloging and locating battery-free RFIDs over a wide area. Specifically, due to their battery-free nature, RFIDs are crippled by their communication range. RFly’s relay can seamlessly integrate with an existing RFID infrastructure and extend the coverage area of every reader by a 100x. Moreover, RFly’s location-finding algorithm collects wireless responses from every RFID along its flight path, then combines these responses to pinpoint the RFID’s location, achieving an accuracy of around a foot. These capabilities enable RFly to scan for objects over a wide area and pinpoint their location to the actual shelf they are placed on.</p>
