--- a/teachbot.html
+++ b/teachbot.html
@@ -4,7 +4,6 @@
 	<title>TeachBot</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
@@ -69,7 +68,7 @@
     <div class="separator"></div>
 
     <div class="centered section">
-        <iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/qiIvc157bzc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/qiIvc157bzc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <h1>Motivation</h1>
