Project page titles mobile-friendly

--- a/tinynets.html
+++ b/tinynets.html
@@ -41,7 +41,7 @@
 
     <div class="cover section">
         <img src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
-        <div class="title">​TinyNets: ​A Lightweight Networking Strategy for Robotic Control Systems</div>
+        <div class="title" id="tinynets-title">​TinyNets: ​Lightweight Networking for Control Systems</div>
     </div>
 
     <h1>Skills Demonstrated</h1>
