Small text changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </div>
 
     <div id="bio" class="section">
-        I am an NSF I-Corps Fellow in New Haven, CT. My goal is to use robots to empower workers with the skills necessary to work in the modern manufacturing economy, and my research explores the use of robots to automate workforce development in manufacturing. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
+        <!-- I am an NSF I-Corps Fellow in New Haven, CT. -->
+        My goal is to use robots to empower workers with the skills necessary to work in the modern manufacturing economy, and my research explores the use of robots to automate workforce development in manufacturing. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
     </div>
 
     <div id="publications" class="section">
