--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,19 @@
         </div>
     </div>
 
+	<a class="item" rel="external" href="https://docs.google.com/document/d/1OyPrLfXdgQsPYqOdM8csT0iSkmOXL0qMn7Q2GYBzDb0/edit?usp=sharing" target="_blank" download>
+        <p class="date">September 27, 2021</p>
+        <div class="w-img">
+            <img src="blog/kidney.jpg" alt="Me about to donate a kidney">
+            <div>
+                <h1>In-Depth Guide to Kidney Donation</h1>
+                <p class="teaser">I donated my left kidney to a stranger. 10/10 would recommend.</p>
+            </div>
+        </div>
+    </a>
+
+    <div class="separator"></div>
+
 	<a class="item" href="blog/bond-graph-quick-ref.pdf" target="_blank" download>
         <p class="date">July 21, 2021</p>
         <div class="w-img">
