--- a/blog.html
+++ b/blog.html
@@ -44,8 +44,8 @@
         <div class="w-img">
             <img src="blog/kidney.jpg" alt="Me about to donate a kidney">
             <div>
-                <h1>In-Depth Guide to Kidney Donation</h1>
-                <p class="teaser">I donated my left kidney to a stranger. 10/10 would recommend.</p>
+                <h1>15 Steps to Donate a Kidney</h1>
+                <p class="teaser">The best decision I ever made was to donate my left kidney to a stranger. I kept a detailed journal of the entire experience, from the idea's inception to my surgery and recovery.</p>
             </div>
         </div>
     </a>
