--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
             <img src="blog/public-speaking.jpg" alt="Me speaking publicly">
             <div>
                 <h1>Common Public Speaking Problems and Exercises to Fix Them</h1>
-                <p class="teaser">Swallow a tablespoon of honey. Perform while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall.</p>
+                <p class="teaser">Swallow a tablespoon of honey. Then, perform while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall.</p>
             </div>
         </div>
     </a>
