--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <div id="title-card" class="section">
         <img id="headshot" src="homepage/headshot.jpeg" alt="My professional headshot">
         <div id="title-card-right">
-            <p>Robotics Fellow with the National Science Foundation Innovation Corps<br>
+            <p>Director of Engineering at Renewvia Energy<br>
             <br>
             PhD in Electrical Engineering and Computer Science, MIT<br>
             <br>
-            Email: <a rel="author" href="mailto:nicholas.s.selby@gmail.com" target="_blank">nicholas.s.selby@gmail.com</a></p>
+            Email: <a rel="author" href="mailto:nicholas.selby@renewvia.com" target="_blank">nicholas.selby@renewvia.com</a></p>
             <div class="separator"></div>
             <div id="social-media-wrapper">
                 <a rel="external" href="https://www.linkedin.com/in/nicholas-selby-5278b334/" target="_blank"><img src="homepage/icon-linkedin.png" alt="LinkedIn icon"></a>
@@ -58,8 +58,7 @@
     </div>
 
     <div id="bio" class="section">
-        <!-- I am an NSF I-Corps Fellow in New Haven, CT. -->
-        My goal is to use robots to empower workers with the skills necessary to work in the modern manufacturing economy, and my research explores the use of robots to automate workforce development in manufacturing. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
+        I am the Director of Engineering at Renewvia Energy. I am responsible for the design, procurement, construction, productive use, and software infrastructure of solar minigrids in rural Kenya and Nigeria. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
     </div>
 
     <div id="publications" class="section">
